<resources>
    <string name="app_name">PM</string>
    <string name="title_activity_main">Password Manager</string>
    <string name="configuration">Settings</string>
    <string name="add">Add</string>
    <string name="add_edit">Add/Edit</string>
    <string name="list">List</string>
    <string name="password_manager">Password Manager</string>
    <string name="n_a">N/A</string>

    <string name="title_activity_view_records">View Passwords</string>
    <string name="action_add">Add</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="resource_name"> Enter site url</string>
    <string name="name">Title</string>
    <string name="no_records">No Records</string>
    <string name="group">Group</string>
    <string name="enter_group">Enter group</string>
    <string name="site">Site</string>
    <string name="user_name">User Name</string>
    <string name="enter_user_name">Enter title</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="action_settings">Settings</string>
    <string name="default_username">Default UserName</string>
    <string name="enter_application_default_user">Enter application default user</string>
    <string name="application_password">Application Password</string>
    <string name="enter_application_password">Enter application password</string>
    <string name="encryption">Encryption</string>
    <string name="rsa">RSA</string>
    <string name="aes">AES CBC PKCS#5 Padding</string>
    <string name="resource_name_label">Resource title</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Go To Secure Storage</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--    Errors-->
    <string name="error_unknown">Sorry, something bad happens!</string>
    <string name="error_http">Network error</string>
    <string name="error_socket">Network error</string>
    <string name="error_null_pointer">Field is empty in the response!</string>
</resources>
